--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div>
             <button class="resetA" onclick="resetA()">Reset All</button></div>
         <div>
-            <h3>GUEST</h3>
+            <h3>AWAY</h3>
             <p class="home" id="guest">0</p>
             <button onclick="guest1()">+1</button>
             <button onclick="guest2()">+2</button>
